Add bulk payout spec, model, controller and test
