# human_api/controllers/jobs_controller.py
@@ -11,6 +11,7 @@ from human_api.models.error_unauthorized_response import ErrorUnauthorizedRespon
 from human_api.models.int_data_response import IntDataResponse  # noqa: E501
 from human_api.models.job_create_body import JobCreateBody  # noqa: E501
 from human_api.models.store_job_intermediate_results_body import StoreJobIntermediateResults  # noqa: E501
+from human_api.models.bulk_payout_job_body import BulkPayoutJob  # noqa: E501
 from human_api.models.job_status_response import JobStatusResponse  # noqa: E501
 from human_api.models.string_data_response import StringDataResponse  # noqa: E501
 from human_api.util import LOGGER
@@ -18,6 +19,7 @@ from hmt_escrow.storage import download
 from hmt_escrow.eth_bridge import get_escrow
 from hmt_escrow.job import Job, launcher, manifest_hash, manifest_url, status
 from basemodels import Manifest
+from decimal import Decimal
 
 
 def abort_job(address, gas_payer, gas_payer_private, network_key=None):  # noqa: E501
@@ -350,6 +352,67 @@ def store_job_interemediate_results(body=None):  # noqa: E501
             return BoolDataResponse(
                 job.store_intermediate_results(results, bytes(body.rep_oracle_pub,
                                                               encoding="utf-8"))), 200
+        except Exception as e:
+            return ErrorParameterResponse(str(e), "rep_oracle_pub_key"), 400
+    else:
+        # TODO: Other blockchains
+        return ErrorParameterResponse("This chain is not yet supported", "network_id"), 400
+
+
+def bulk_payout_job(body=None):  # noqa: E501
+    """Performs a payout to multiple ethereum addresses.
+
+    When the payout happens, final results are uploaded to S3 and contract's state is updated to Partial or Paid depending on contract's balance.
+
+    :param body: 
+    :type body: dict | bytes
+
+    :rtype: BoolDataResponse
+    """
+    if connexion.request.is_json:
+        body = BulkPayoutJob.from_dict(connexion.request.get_json())  # noqa: E501
+    if body.network_id == 0:  # Ethereum Rinkeby
+        try:
+            factory_addr = launcher(get_escrow(body.address), body.gas_payer)
+        except Exception as e:
+            return ErrorNotexistResponse(str(e)), 404
+        try:
+            req = Request(body.results_url)
+            req.add_header(
+                "User-Agent",
+                "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.75 Safari/537.36"
+            )
+            req.add_header("X-Requested-With", "XMLHttpRequest")
+            data = urlopen(req).read()
+            results = json.loads(data)
+        except Exception as e:
+            return ErrorParameterResponse(str(e), "results_url"), 400
+        try:
+            req = Request(body.payouts_url)
+            req.add_header(
+                "User-Agent",
+                "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.75 Safari/537.36"
+            )
+            req.add_header("X-Requested-With", "XMLHttpRequest")
+            data = urlopen(req).read()
+            payouts = [(address, Decimal(amount))
+                       for (address, amount) in json.loads(data).items()]
+        except Exception as e:
+            return ErrorParameterResponse(str(e), "payouts_url"), 400
+        try:
+            job = Job(credentials={
+                "gas_payer": body.gas_payer,
+                "gas_payer_priv": body.gas_payer_private,
+                "rep_oracle_priv_key": bytes(body.gas_payer_private.lstrip("0x"), encoding="utf-8")
+            },
+                      factory_addr=factory_addr,
+                      escrow_addr=body.address)
+        except Exception as e:
+            return ErrorUnauthorizedResponse(str(e)), 401
+        try:
+            return BoolDataResponse(
+                job.bulk_payout(payouts, results, bytes(body.rep_oracle_pub,
+                                                        encoding="utf-8"))), 200
         except Exception as e:
             return ErrorParameterResponse(str(e), "rep_oracle_pub_key"), 400
     else:
