# human_api/models/bulk_payout_job_body.py
@@ -1,0 +1,225 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from human_api.models.base_model_ import Model
+from human_api import util
+
+
+class BulkPayoutJob(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self,
+                 gas_payer: str = None,
+                 gas_payer_private: str = None,
+                 address: str = None,
+                 rep_oracle_pub: str = None,
+                 results_url: str = None,
+                 payouts_url: str = None,
+                 network_id: int = 0):  # noqa: E501
+        """BulkPayoutJob - a model defined in Swagger
+
+        :param gas_payer: The gas_payer of this BulkPayoutJob.  # noqa: E501
+        :type gas_payer: str
+        :param gas_payer_private: The gas_payer_private of this BulkPayoutJob.  # noqa: E501
+        :type gas_payer_private: str
+        :param address: The address of this BulkPayoutJob.  # noqa: E501
+        :type address: str
+        :param rep_oracle_pub: The rep_oracle_pub of this BulkPayoutJob.  # noqa: E501
+        :type rep_oracle_pub: str
+        :param results_url: The results_url of this BulkPayoutJob.  # noqa: E501
+        :type results_url: str
+        :param payouts_url: The payouts_url of this BulkPayoutJob.  # noqa: E501
+        :type payouts_url: str
+        :param network_id: The network_id of this BulkPayoutJob.  # noqa: E501
+        :type network_id: int
+        """
+        self.swagger_types = {
+            'gas_payer': str,
+            'gas_payer_private': str,
+            'address': str,
+            'rep_oracle_pub': str,
+            'results_url': str,
+            'payouts_url': str,
+            'network_id': int
+        }
+
+        self.attribute_map = {
+            'gas_payer': 'gasPayer',
+            'gas_payer_private': 'gasPayerPrivate',
+            'address': 'address',
+            'rep_oracle_pub': 'repOraclePub',
+            'results_url': 'resultsUrl',
+            'payouts_url': 'payoutsUrl',
+            'network_id': 'networkId'
+        }
+        self._gas_payer = gas_payer
+        self._gas_payer_private = gas_payer_private
+        self._address = address
+        self._rep_oracle_pub = rep_oracle_pub
+        self._results_url = results_url
+        self._payouts_url = payouts_url
+        self._network_id = network_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BulkPayoutJob':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The store_job_intermediate_results_body of this BulkPayoutJob.  # noqa: E501
+        :rtype: BulkPayoutJob
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def gas_payer(self) -> str:
+        """Gets the gas_payer of this BulkPayoutJob.
+
+
+        :return: The gas_payer of this BulkPayoutJob.
+        :rtype: str
+        """
+        return self._gas_payer
+
+    @gas_payer.setter
+    def gas_payer(self, gas_payer: str):
+        """Sets the gas_payer of this BulkPayoutJob.
+
+
+        :param gas_payer: The gas_payer of this BulkPayoutJob.
+        :type gas_payer: str
+        """
+
+        self._gas_payer = gas_payer
+
+    @property
+    def gas_payer_private(self) -> str:
+        """Gets the gas_payer_private of this BulkPayoutJob.
+
+
+        :return: The gas_payer_private of this BulkPayoutJob.
+        :rtype: str
+        """
+        return self._gas_payer_private
+
+    @gas_payer_private.setter
+    def gas_payer_private(self, gas_payer_private: str):
+        """Sets the gas_payer_private of this BulkPayoutJob.
+
+
+        :param gas_payer_private: The gas_payer_private of this BulkPayoutJob.
+        :type gas_payer_private: str
+        """
+
+        self._gas_payer_private = gas_payer_private
+
+    @property
+    def address(self) -> str:
+        """Gets the address of this BulkPayoutJob.
+
+
+        :return: The address of this BulkPayoutJob.
+        :rtype: str
+        """
+        return self._address
+
+    @address.setter
+    def address(self, address: str):
+        """Sets the address of this BulkPayoutJob.
+
+
+        :param address: The address of this BulkPayoutJob.
+        :type address: str
+        """
+
+        self._address = address
+
+    @property
+    def rep_oracle_pub(self) -> str:
+        """Gets the rep_oracle_pub of this BulkPayoutJob.
+
+
+        :return: The rep_oracle_pub of this BulkPayoutJob.
+        :rtype: str
+        """
+        return self._rep_oracle_pub
+
+    @rep_oracle_pub.setter
+    def rep_oracle_pub(self, rep_oracle_pub: str):
+        """Sets the rep_oracle_pub of this BulkPayoutJob.
+
+
+        :param rep_oracle_pub: The rep_oracle_pub of this BulkPayoutJob.
+        :type rep_oracle_pub: str
+        """
+
+        self._rep_oracle_pub = rep_oracle_pub
+
+    @property
+    def results_url(self) -> str:
+        """Gets the results_url of this BulkPayoutJob.
+
+
+        :return: The results_url of this BulkPayoutJob.
+        :rtype: str
+        """
+        return self._results_url
+
+    @results_url.setter
+    def results_url(self, results_url: str):
+        """Sets the results_url of this BulkPayoutJob.
+
+
+        :param results_url: The results_url of this BulkPayoutJob.
+        :type results_url: str
+        """
+
+        self._results_url = results_url
+
+    @property
+    def payouts_url(self) -> str:
+        """Gets the payouts_url of this BulkPayoutJob.
+
+
+        :return: The payouts_url of this BulkPayoutJob.
+        :rtype: str
+        """
+        return self._payouts_url
+
+    @payouts_url.setter
+    def payouts_url(self, payouts_url: str):
+        """Sets the payouts_url of this BulkPayoutJob.
+
+
+        :param payouts_url: The payouts_url of this BulkPayoutJob.
+        :type payouts_url: str
+        """
+
+        self._payouts_url = payouts_url
+
+    @property
+    def network_id(self) -> int:
+        """Gets the network_id of this BulkPayoutJob.
+
+
+        :return: The network_id of this BulkPayoutJob.
+        :rtype: int
+        """
+        return self._network_id
+
+    @network_id.setter
+    def network_id(self, network_id: int):
+        """Sets the network_id of this BulkPayoutJob.
+
+
+        :param network_id: The network_id of this BulkPayoutJob.
+        :type network_id: int
+        """
+
+        self._network_id = network_id
